<resources>
    <string name="app_name">Moneygame</string>
    <string name="LoginScreenEnterEmail">Email</string>
    <string name="LoginScreenEnterPassword">Password</string>
    <string name="LoginScreenHeading">Login</string>
    <string name="loginScreenButton">Login</string>
    <string name="menu_portfolio">Portfolio</string>
    <string name="menu_all_transactions">Transactions</string>
    <string name="menu_buy">Buy</string>
    <string name="menu_sell">Sell</string>
    <string name="menu_user_info">My Info</string>
    <string name="tv_first_name_userFragment">First Name:</string>
    <string name="tv_last_name_user_fragment">Last Name:</string>
    <string name="tv_user_userFragment">User Email:</string>
    <string name="tv_reg_date_user_fragment">Registration Date:</string>
    <string name="stock_symbol_portfolio">Stock Symbol</string>
    <string name="quantity_portfolio">Quantity</string>
    <string name="current_price_portfolio">Current Price</string>
    <string name="stock_symbol_transaction">Stock Symbol</string>
    <string name="transaction_type_transaction">Transaction Type</string>
    <string name="quantity_transaction">Quantity</string>
    <string name="transaction_price_transaction">Transaction Price</string>
    <string name="transaction_date_transaction">Transaction Date</string>
    <string name="buy_stock_symbol">Enter Stock Symbol</string>
    <string name="buy_enter_quantity">Enter Quantity</string>
    <string name="buy_buy_btn">Buy</string>
    <string name="sell_sellBtn">Sell</string>
    <string name="logoutBtn_user">Logout</string>
</resources>