<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_portfolio"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/darkBlue"
        android:layout_marginLeft="16dp"
        android:id="@+id/portfolio_fragment_heading"
        android:layout_alignParentTop="true" />

    <View
        android:layout_width="90dp"
        android:layout_height="5dp"
        android:layout_below="@+id/portfolio_fragment_heading"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/loginScreenLine"
        android:background="@color/darkBlue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/loginScreenLine"
        android:id="@+id/portfolio_header"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/stock_symbol_portfolio"
            android:layout_weight="1"
            android:padding="3dp"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/quantity_portfolio"
            android:layout_weight="1"
            android:padding="3dp"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/current_price_portfolio"
            android:layout_weight="1"
            android:padding="3dp"
            android:textSize="15sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/portfolio_header"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/portfolio_recycleView" />

</RelativeLayout>