<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_buy"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/darkBlue"
        android:layout_marginLeft="16dp"
        android:id="@+id/transaction_fragment_heading" />

    <View
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_below="@+id/transaction_fragment_heading"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/buyScreenLine"
        android:background="@drawable/rounded_corner" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_stock_symbol"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/tv_stock_symbol"
        android:layout_below="@+id/buyScreenLine"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_stock_symbol"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:completionThreshold="1"
        android:id="@+id/buy_stock_symbol_ac"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:textSize="16sp"
        android:elevation="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_enter_quantity"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/tv_quantity"
        android:layout_below="@+id/buy_stock_symbol_ac"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/tv_quantity"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:elevation="5dp"
        android:textSize="16sp"
        android:id="@+id/buy_qty" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/buy_qty"
        android:layout_marginTop="30dp"
        android:text="@string/buy_buy_btn"
        android:id="@+id/buyBtn"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="10dp"/>


</RelativeLayout>