<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginScreenHeading"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/darkBlue"
        android:layout_marginLeft="16dp"
        android:id="@+id/loginScreenHeading" />

    <View
        android:layout_width="70dp"
        android:layout_height="5dp"
        android:layout_below="@+id/loginScreenHeading"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/loginScreenLine"
        android:background="@drawable/rounded_corner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginScreenEnterEmail"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/tv_email"
        android:layout_below="@+id/loginScreenLine"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/tv_email"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:textSize="16sp"
        android:id="@+id/LoginScreenEmailEditText"
        android:elevation="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginScreenEnterPassword"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/tv_pass"
        android:layout_below="@+id/LoginScreenEmailEditText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/tv_pass"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:textSize="16sp"
        android:id="@+id/LoginScreenPasswordEditText"
        android:inputType="textPassword"
        android:elevation="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/LoginScreenPasswordEditText"
        android:layout_marginTop="30dp"
        android:text="@string/loginScreenButton"
        android:id="@+id/LoginScreenBtn"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="10dp"/>


</RelativeLayout>